--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo:  #831137;
-    --verde: #722F37;
+    --cor-de-fundo:  #722F37;
+    --rosa-claro: #f5bac1;
     --branco: #FFFFFF;
     --botao-ativo: #a4596d;
     --botao-inativo: rgba(58, 55, 94, 0.5);
@@ -33,12 +33,11 @@ body {
 }
 
 .titulo-principal span {
-    color: var(--verde);
+    color: var(--rosa-claro);
 }
 
-
 .botao {
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: "Chakra Petch", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -60,10 +59,9 @@ body {
 .botoes {
     display: block;
 }
-
 .botao.ativo {
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
+    border-bottom: 4px solid var(--rosa-claro);
 }
 
 .abas-textos {
@@ -87,33 +85,12 @@ body {
 
 .aba-conteudo-titulo-secundario {
     text-align: center;
-    color: var(--verde);
+    color: var(--rosa-claro);
     text-transform: uppercase;
 }
-
 .contador {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.contador-digito {
-    padding: 0 16px;
-    text-align: center;
-    min-width: 100px;
-}
-
-.contador-digito-numero {
-    font-size: 80px;
-    margin: 0;
-
-}
-
-.contador-digito-texto {
-    color: var(--verde);
     font-size: 20px;
-    margin: 0;
-
+    text-align: center;
 }
 
 @media screen and (min-width: 768px) {
